[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["Dmitry Mugtasimov <dmugtasimov@gmail.com>"]
readme = "README.md"
packages = [{include = "machine_learning"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^3.6.3"
matplotlib = "^3.7.1"
prettytable = "^3.7.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
